Plug 2 groups of memory leaks in the parser plan2.

Thanks for the patch Eugene!
BUG: 315910
FIXED-IN: 4.11